apps/churchlify/webapp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: churchlify-webapp
  namespace: churchlify
spec:
  replicas: 2
  selector:
    matchLabels:
      app: churchlify-webapp
  template:
    metadata:
      labels:
        app: churchlify-webapp
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: worker

      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: churchlify-webapp

      containers:
        - name: churchlify-webapp
          image: ghcr.io/agogos-llc/churchlify-web:latest
          ports:
            - containerPort: 3000

          # Load app-specific env vars
